# custom-ballspotting

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
configs/: README.md  extract_frames.example.json  extract_frames_720p.example.json  final_posttrain_from_tdeed.example.json  final_posttrain_from_tdeed_720p.example.json  inference.example.json  inference_720p.example.json  posttrain_from_custom.example.json  posttrain_from_tdeed.example.json  pretrain.example.json
custom_ballspotting/: __init__.py  actions.py  checkpoints.py  cli.py  data.py  eval.py  inference.py  training.py
custom_ballspotting/model/: shift.py  tdeed.py
scripts/: run-posttrain-pm2.sh
